refactored internal data structure once again